# bot

./: README.md  app.js  bot.py  botsponsori-93b6d1184b45.json  generate-icons.html  index.html  manifest.json  requirements.txt  requirements.txt.txt  server.py  styles.css  sw.js
AutoWorld/: README.md  WALLPAPER_README.md  app.json  package-lock.json  package.json
AutoWorld/src/components/common/: Button.tsx  Card.tsx  Header.tsx
AutoWorld/src/components/wallpaper/: AIInsightsCard.tsx  WallpaperCard.tsx
AutoWorld/src/constants/: index.ts
AutoWorld/src/navigation/: AppNavigator.tsx
AutoWorld/src/screens/: ArticleDetailScreen.tsx  AutoHelpScreen.tsx  BlogScreen.tsx  ChatScreen.tsx  ClubDetailScreen.tsx  ClubsScreen.tsx  CommunitiesScreen.tsx  CommunityDetailScreen.tsx  EventDetailScreen.tsx  EventsScreen.tsx  HelpRequestDetailScreen.tsx  HomeScreen.tsx  IntelligentWallpaperScreen.tsx  MapScreen.tsx  MarketplaceItemDetailScreen.tsx  MarketplaceScreen.tsx  MessengerScreen.tsx  ProfileScreen.tsx
AutoWorld/src/services/: AIWallpaperService.ts  WallpaperService.ts  WeatherService.ts
AutoWorld/src/types/: index.ts
privacy-screen-app/: LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
privacy-screen-app/config/: settings.yaml
privacy-screen-app/src/: __init__.py  main.py
privacy-screen-app/src/core/: __init__.py  camera_manager.py  face_detector.py  gaze_tracker.py  privacy_screen_app.py  screen_protector.py
privacy-screen-app/src/models/: __init__.py  face_data.py
privacy-screen-app/src/utils/: __init__.py  config_manager.py  image_processing.py  logger.py
privacy-screen-app/tests/: test_basic.py
smart-wallpaper/: .gitignore  QUICKSTART.md  README.md  config.js  docker-compose.yml  package.json  server.js  start.sh  test.js  weather-integration.js
